<resources>
    <string name="app_name">Cool ConstraintLayout</string>

    <!-- Common -->
    <string name="action_settings">Settings</string>

    <!-- Cheat sheet -->
    <string name="button">Button</string>
    <string name="constraint_edge">Edge</string>
    <string name="constraint_center">Edge</string>
    <string name="constraint_baseline">Baseline</string>

    <!-- Alignment example -->
    <!-- ================= -->
    <string name="example_alignment_title">Easier Alignment</string>
    <string name="ratio_group_title">Image Ratio</string>
    <string name="resize_constraint_group_title">Resize + Center Constraint</string>
    <string name="resize_manual_group_title">Resize + Center Manual</string>

    <!-- Dimension ratio example -->
    <!-- ======================= -->
    <string name="example_dimension_ratio_title">Dimension Ratio</string>
    <string name="square_image_view">SquareImageView</string>

    <!-- Dimension ratios -->
    <string name="ratio_1_1">1:1</string>
    <string name="ratio_16_10">16:10</string>
    <string name="ratio_16_9">16:9</string>
    <string name="ratio_4_3">4:3</string>
    <string name="ratio_3_1">3:1</string>

    <!-- Chains example -->
    <!-- ===================== -->
    <string name="example_chains_title">Chains, Chains, Chains…</string>
    <string name="chains_text_a">Alpha</string>
    <string name="chains_text_b">Beta</string>
    <string name="chains_text_c">Gamma</string>
    <string name="chains_text_d">Delta</string>
    <string name="chains_vertical_toggle">Toggle Vertical</string>
    <string name="chains_d_toggle">Toggle D</string>

    <!-- Circular example -->
    <string name="circular_label">Center of the Universe</string>

    <!-- ConstraintSet example -->
    <!-- ===================== -->
    <string name="example_constraint_set_title">ConstraintSet</string>
    <string name="lina_name">LINA</string>
    <string name="lina_skill_dragon_slave">Dragon Slave</string>
    <string name="lina_skill_light_strike_array">Light Strike Array</string>
    <string name="lina_skill_fiery_soul">Fiery Soul</string>
    <string name="lina_skill_laguna_blade">Laguna Blade</string>
    <string name="lina_int">27 + 3.20</string>
    <string name="lina_agi">16 + 1.50</string>
    <string name="lina_str">18 + 1.50</string>
    <string name="action_swap_constraint_set">Swap</string>

    <!-- Dynamic constraint layout example -->
    <!-- ================================= -->

    <string name="dynamic_constraint_layout_title">Build Your Own from Scratch</string>
    <string name="dynamic_button_add_image">Add Image</string>
    <string name="dynamic_button_add_text">Add Text</string>
    <string name="dynamic_button_clear">Clear</string>

    <!-- List items -->
    <!-- ========== -->
    <string name="content_description_image_thumbnail">image thumbnail</string>

    <string name="unsplash_cory_seward">Cory Seward</string>
    <string name="unsplash_roberta_sorge">Roberta Sorge</string>
    <string name="unsplash_tatiana_lapina">Tatiana Lapina</string>
    <string name="unsplash_shumilov_ludmila">Shumilov Ludmila</string>
    <string name="unsplash_julia_d_alkmin">Julia D\'Alkmin</string>
    <string name="unsplash_nousnou_iwasaki">Nousnou Iwasaki</string>
    <string name="unsplash_mike_kenneally">Mike Kenneally</string>
    <string name="unsplash_danielle_macinnes">Danielle MacInnes</string>
    <string name="unsplash_maria_fernanda_gonzalez">Maria Fernanda Gonzalez</string>

    <string name="unsplash_url_cory_seward_eggs">https://unsplash.com/photos/svazqK-ShNk</string>
    <string name="unsplash_url_roberta_sorge_honey">https://unsplash.com/photos/kp9UVn-PUac</string>
    <string name="unsplash_url_tatiana_lapina_macaroon">https://unsplash.com/photos/qpf2glK0bAA</string>
    <string name="unsplash_url_shumilov_ludmila_pears">https://unsplash.com/photos/j7X_hySaUa4</string>
    <string name="unsplash_url_julia_d_alkmin_ice_tea">https://unsplash.com/photos/WKCjwrtjhVg</string>
    <string name="unsplash_url_nousnou_iwasaki_coffee_beans">https://unsplash.com/photos/myPzH34VYK4</string>
    <string name="unsplash_url_mike_kenneally_green_beans">https://unsplash.com/photos/8eJPcAuqIhY</string>
    <string name="unsplash_url_danielle_macinnes_artichokes">https://unsplash.com/photos/yOT5d1PqLGY</string>
    <string name="unsplash_url_roberta_sorge_pineapple">https://unsplash.com/photos/Q3jYvjW4NDk</string>
    <string name="unsplash_url_roberta_sorge_pomegranate">https://unsplash.com/photos/hA14zG3R4fk</string>
    <string name="unsplash_url_maria_fernanda_gonzalez_coffee">https://unsplash.com/photos/kWVXCmyB9so</string>

    <string-array name="random_words">
        <item name="random_word_01">Archipeligo</item>
        <item name="random_word_02">Boa</item>
        <item name="random_word_03">Charismatic</item>
        <item name="random_word_04">Decibel</item>
        <item name="random_word_05">Effervescent</item>
        <item name="random_word_06">Flare</item>
        <item name="random_word_07">Ginger</item>
        <item name="random_word_08">Harlequinn</item>
    </string-array>

</resources>
