<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.randomlytyping.ccl.ConstraintSetActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lina_mcbeamish" />

    <View
        style="@style/Divider"
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/name"
        style="@style/TextGothic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/lina_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/attr_str"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/icon_q"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/icon_w"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:srcCompat="@drawable/lina_dragon_slave" />

    <ImageView
        android:id="@+id/icon_w"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/icon_q"
        app:layout_constraintRight_toLeftOf="@+id/icon_e"
        app:layout_constraintTop_toTopOf="@+id/icon_q"
        app:srcCompat="@drawable/lina_light_strike_array" />

    <ImageView
        android:id="@+id/icon_e"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/icon_w"
        app:layout_constraintRight_toLeftOf="@+id/icon_r"
        app:layout_constraintTop_toTopOf="@+id/icon_w"
        app:srcCompat="@drawable/lina_fiery_soul" />

    <ImageView
        android:id="@+id/icon_r"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@null"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/icon_e"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icon_e"
        app:srcCompat="@drawable/lina_laguna_blade" />

    <ImageView
        android:id="@+id/icon_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/attr_int"
        app:layout_constraintRight_toRightOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/attr_int"
        app:srcCompat="@drawable/overviewicon_int" />

    <ImageView
        android:id="@+id/icon_agi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/attr_agi"
        app:layout_constraintRight_toRightOf="@+id/icon_int"
        app:layout_constraintTop_toTopOf="@+id/attr_agi"
        app:srcCompat="@drawable/overviewicon_agi" />

    <ImageView
        android:id="@+id/icon_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/attr_str"
        app:layout_constraintRight_toRightOf="@+id/icon_int"
        app:layout_constraintTop_toTopOf="@+id/attr_str"
        app:srcCompat="@drawable/overviewicon_str" />

    <TextView
        android:id="@+id/attr_int"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/lina_int"
        app:layout_constraintBottom_toTopOf="@+id/attr_agi"
        app:layout_constraintRight_toLeftOf="@+id/icon_int"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/attr_agi"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/lina_agi"
        app:layout_constraintBottom_toTopOf="@+id/attr_str"
        app:layout_constraintRight_toLeftOf="@+id/icon_agi"
        app:layout_constraintTop_toBottomOf="@id/attr_int" />

    <TextView
        android:id="@+id/attr_str"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lina_str"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintRight_toLeftOf="@+id/icon_str"
        app:layout_constraintTop_toBottomOf="@id/attr_agi" />

    <TextView
        android:id="@+id/skill_q"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/lina_skill_dragon_slave"
        app:layout_constraintLeft_toLeftOf="@+id/icon_q"
        app:layout_constraintRight_toRightOf="@+id/icon_q"
        app:layout_constraintTop_toBottomOf="@+id/icon_q" />

    <TextView
        android:id="@+id/skill_w"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/lina_skill_light_strike_array"
        app:layout_constraintLeft_toLeftOf="@+id/icon_w"
        app:layout_constraintRight_toRightOf="@+id/icon_w"
        app:layout_constraintTop_toBottomOf="@+id/icon_w" />

    <TextView
        android:id="@+id/skill_e"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lina_skill_fiery_soul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/icon_e"
        app:layout_constraintRight_toRightOf="@+id/icon_e"
        app:layout_constraintTop_toBottomOf="@+id/icon_e" />

    <TextView
        android:id="@+id/skill_r"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/lina_skill_laguna_blade"
        app:layout_constraintLeft_toLeftOf="@+id/icon_r"
        app:layout_constraintRight_toRightOf="@+id/icon_r"
        app:layout_constraintTop_toBottomOf="@+id/icon_r" />

</android.support.constraint.ConstraintLayout>
