<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.randomlytyping.ccl.ConstraintSetActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:srcCompat="@drawable/lina_mcbeamish" />

    <View
        style="@style/Divider"
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        style="@style/TextGothic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/lina_name"
        app:layout_constraintBottom_toTopOf="@+id/icon_int"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/icon_q"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/icon_w"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="@+id/icon_w"
        app:srcCompat="@drawable/lina_dragon_slave"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <ImageView
        android:id="@+id/icon_w"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/icon_e"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="@+id/icon_e"
        app:layout_constraintTop_toBottomOf="@+id/icon_q"
        app:srcCompat="@drawable/lina_light_strike_array"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/icon_e"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/icon_r"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="@+id/icon_r"
        app:layout_constraintTop_toBottomOf="@+id/icon_w"
        app:srcCompat="@drawable/lina_fiery_soul" />

    <ImageView
        android:id="@+id/icon_r"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="0dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/icon_e"
        app:srcCompat="@drawable/lina_laguna_blade" />

    <ImageView
        android:id="@+id/icon_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/attr_int"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/overviewicon_int" />

    <ImageView
        android:id="@+id/icon_agi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/attr_agi"
        app:layout_constraintLeft_toLeftOf="@+id/attr_int"
        app:layout_constraintRight_toRightOf="@+id/attr_int"
        app:layout_constraintTop_toBottomOf="@+id/attr_int"
        app:srcCompat="@drawable/overviewicon_agi" />

    <ImageView
        android:id="@+id/icon_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/attr_str"
        app:layout_constraintLeft_toLeftOf="@+id/attr_agi"
        app:layout_constraintRight_toRightOf="@+id/attr_agi"
        app:layout_constraintTop_toBottomOf="@+id/attr_agi"
        app:srcCompat="@drawable/overviewicon_str" />

    <TextView
        android:id="@+id/attr_int"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lina_int"
        app:layout_constraintBottom_toTopOf="@+id/icon_agi"
        app:layout_constraintLeft_toLeftOf="@+id/icon_int"
        app:layout_constraintRight_toRightOf="@+id/icon_int"
        app:layout_constraintTop_toBottomOf="@+id/icon_int"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/attr_agi"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lina_agi"
        app:layout_constraintBottom_toTopOf="@+id/icon_str"
        app:layout_constraintLeft_toLeftOf="@+id/icon_agi"
        app:layout_constraintRight_toRightOf="@+id/icon_agi"
        app:layout_constraintTop_toBottomOf="@+id/icon_agi"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/attr_str"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lina_str"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="@+id/icon_str"
        app:layout_constraintRight_toRightOf="@+id/icon_str"
        app:layout_constraintTop_toBottomOf="@+id/icon_str"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/skill_q"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lina_skill_dragon_slave"
        app:layout_constraintBottom_toBottomOf="@+id/icon_q"
        app:layout_constraintLeft_toRightOf="@+id/icon_q"
        app:layout_constraintTop_toTopOf="@+id/icon_q"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/skill_w"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lina_skill_light_strike_array"
        app:layout_constraintBottom_toBottomOf="@+id/icon_w"
        app:layout_constraintLeft_toRightOf="@+id/icon_w"
        app:layout_constraintTop_toTopOf="@+id/icon_w" />

    <TextView
        android:id="@+id/skill_e"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lina_skill_fiery_soul"
        app:layout_constraintBottom_toBottomOf="@+id/icon_e"
        app:layout_constraintLeft_toRightOf="@+id/icon_e"
        app:layout_constraintTop_toTopOf="@+id/icon_e" />

    <TextView
        android:id="@+id/skill_r"
        style="@style/TextGothic.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lina_skill_laguna_blade"
        app:layout_constraintBottom_toBottomOf="@+id/icon_r"
        app:layout_constraintLeft_toRightOf="@+id/icon_r"
        app:layout_constraintTop_toTopOf="@+id/icon_r"
        app:layout_constraintVertical_bias="0.51" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        style="@style/Toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@null"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

</android.support.constraint.ConstraintLayout>
